<resources>
    <string name="link">Website: github.com/dkim0419/SoundRecorder</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>
    <string name="notification_recording">Recording...</string>
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>
    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">Tap the button to start recording your voice</string>
    <string name="record_in_progress">Recording</string>
    <string name="send_to">Send to</string>
    <string name="pref_high_quality_key">pref_high_quality</string>
    <string name="pref_high_quality_title">Enable High Quality Recording</string>
    <string name="pref_high_quality_desc">Record in CD Quality</string>
    <string name="pref_about_key">pref_about</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_desc">v%s</string>
    <string name="simple_circle_button_example">Simple Circle Button Example</string>
    <string name="text_inside_circle_button_example">Text Inside Circle Button Example</string>
    <string name="text_outside_circle_button_example">Text Outside Circle Button Example</string>
    <string name="ham_button_example">Ham Button Example</string>
    <string name="square_and_piece_corner_radius_example">Square And Piece Corner Radius Example</string>
    <string name="boom_example">Boom Example</string>
    <string name="button_place_alignment_example">Button Place Alignment Example</string>
    <string name="order_example">Order Example</string>
    <string name="actionbar_example">ActionBar Example</string>
    <string name="tool_bar_example">ToolBar Example</string>
    <string name="draggable_example">Draggable Example</string>
    <string name="ease_example">Ease Example</string>
    <string name="listener_example">Listener Example</string>
    <string name="control_example">Control Example</string>
    <string name="share_example">Share Example</string>
    <string name="list_example">List Example</string>
    <string name="recycler_view_example">Recycler View Example</string>
    <string name="fragment_example">Fragment Example</string>
    <string name="change_boom_button_example">Change Boom Button Example</string>
    <string name="three_d_animation_example">3D Animation Example</string>
    <string name="custom_position_example">Custom Position Example</string>
    <string name="fade_views_example">Fade Views Example</string>
    <string name="orientation_example">Orientation Example</string>
    <string name="text_inside_circle_button_text_normal">Text Inside Circle Button(Normal)</string>
    <string name="text_inside_circle_button_text_highlighted">Text Inside Circle Button(Highlighted)</string>
    <string name="text_inside_circle_button_text_unable">Text Inside Circle Button(Unable)</string>
    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
    <string name="text_outside_circle_button_text_highlighted">Text Outside Circle Button(Highlighted)</string>
    <string name="text_outside_circle_button_text_unable">Text Outside Circle Button(Unable)</string>
    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_text_highlighted">Ham Button Text(Highlighted)</string>
    <string name="text_ham_button_text_unable">Ham Button Text(Unable)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>
    <string name="text_ham_button_sub_text_highlighted">Ham Button Sub Text(Highlighted)</string>
    <string name="text_ham_button_sub_text_unable">Ham Button Sub Text(Unable)</string>
    <string name="upload_prescriptin">Upload Your Prescription</string>
    <string name="record_voice">Record Your Voice</string>
    <string name="Write_text">Write Text</string>
    <string name="enterphonenumber">Enter Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="action_edit"><u>Edit</u></string>
    <string name="phone_number"><u>Phone Number</u></string>
    <string name="account_registeration"><u>Account Login</u></string>
    <string name="verify">Verify</string>
    <string name="info_delivery_areas">Delivery Areas: %1$s</string>
    <string name="pleasewait">Please wait</string>
    <string name="register">Verify Your phone</string>
    <string name="phone_hint">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="select_date">Select Date</string>
    <string name="Current_location">Current location</string>
    <string name="resend">Resend</string>
    <string name="invalid_phone_number">Please enter a valid phone number</string>
    <string name="valid_phone_number">Valid phone numbers!</string>
    <string name="current_location">Current Location</string>
    <string name="address">Address</string>
    <string name="building_no">Building No.</string>
    <string name="location_name">Location Name</string>
    <string name="Floor">Floor</string>
    <string name="Appartment">Appartment No</string>
    <string name="verification_sent">Verification Code Sent Sucessfully.</string>
    <string name="Voice">Record Your Voice.</string>
    <string name="Details">Product Details.</string>
    <string name="Products">Products</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="customer_found">Welcome Back . </string>
    <string name="location_added">Location Added Successfully . </string>
    <string name="location_not_added">Location Not Added  . </string>
    <string name="order_submitted">Order Submitted Successfully . </string>
    <string name="order_not_submitted">Order Not Submitted  . </string>
    <string name="order_canceled">Order Canceled Successfully . </string>
    <string name="order_not_canceled">Order Not Canceld  . </string>
    <string name="error_location_empty">Location Not Selected From List . </string>
    <string name="insert_location_name">Please Insert Your Location Name. </string>
    <string name="select_location_form_list">Please Select Location From List. </string>
    <string name="data_updated_successfully">Your Profile Updated Successfully . </string>
    <string name="data_not_updated">Error Updating Your Profile . </string>
    <string name="customer_created">Welcome.You Have To Complete Your Profile !</string>
    <string name="verification_code_not_sent">Error Sending Verification Code </string>
    <string name="my_number">Ex. 01279564293</string>
    <string name="add" formatted="false">\u20B9 %1$.2f</string>
    <string-array name="my_items">
        <item>Dummy Item 1</item>
        <item>Dummy Item 2</item>
        <item>Dummy Item 3</item>
        <item>Dummy Item 4</item>
        <item>Dummy Item 5</item>
        <item>Dummy Item 6</item>
        <item>Dummy Item 7</item>
        <item>Dummy Item 8</item>
        <item>Dummy Item 9</item>
        <item>Dummy Item 10</item>
        <item>Dummy Item 11</item>
        <item>Dummy Item 12</item>
        <item>Dummy Item 13</item>
        <item>Dummy Item 14</item>
    </string-array>
    <string name="pharmacy_email_address">hello@gmail.com</string>
    <string name="pharmacy_address">Ahana Pharmacy \n S K Sahana Road\n Kenduadihi, Bankura \n  722103</string>
    <string name="add_order">Add order</string>
    <string name="author_contact_no">9563777896</string>
    <string name="developer_contact">http://arkanayan.me</string>
    <string name="empty_text">Select song from below to play</string>
    <string name="standard">Standard</string>
    <string name="title_changelog">Change log</string>
    <string name="changelog_close">Close</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="idle">Idle</string>
    <string name="crash_toast_text">Oops Crashe Occurred</string>
    <string name="offer_banner">"Shop for 2000 to get Rs 100 discount and shop for 3000 to get Rs 200 discount"</string>
    <string name="order">Order</string>
    <string name="similar_product">You may also like</string>
    <string name="slogan">Assignment</string>
    <string name="email_developer_">Email Developer:</string>
    <string name="personal_website_">Personal Website :</string>
    <string name="site_hitesh">www.hiteshsahu.com</string>
    <string name="contact_number">Contact Number</string>
    <string name="mob_num">8888813275</string>
    <string name="lab_locations">Locations</string>
    <string name="pune">Pune</string>
    <string name="address_value">C 1002, Lorelle Socity Wakad Pune</string>
    <string name="app_name">DawaDoz</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>
    <string name="SentToPharmacyStatus">1</string>
    <string name="UnderProcessingStatus">2</string>
    <string name="NotDeliveredStatus">5</string>
    <string name="DeliveredStatus">4</string>
    <string name="OnDeliveryStatus">3</string>
    <string name="CancelledStatus">6</string>
    <string name="CurrentOrders">0</string>
    <string name="HistoryOrders">1</string>
    <string name="title_home">Home</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="my_locations">My Locations</string>
    <string name="edit">edit</string>
    <string name="locations">Location</string>
</resources>