<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017. http://hiteshsahu.com- All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ If you use or distribute this project then you MUST ADD A COPY OF LICENCE
  ~ along with the project.
  ~  Written by Hitesh Sahu <hiteshkrsahu@Gmail.com>, 2017.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:visible="false"
            android:icon="@drawable/app_icon"
            android:title="@string/title_home" />
        <item
            android:id="@+id/manage_profile"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/manage_profile" />
        <item
            android:id="@+id/my_locations"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/my_locations" />
    </group>

</menu>