<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="5dp">
    <TextView
        android:id="@+id/btnCurrentLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:gravity="center_horizontal"
        android:text=" Location"
        android:textColor="@color/button_red"
        android:textSize="25dp"
        android:textStyle="bold" />
    <fragment
        android:layout_below="@id/btnCurrentLocation"
        android:id="@+id/mapfragment"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_below="@+id/mapfragment">

        <LinearLayout
            android:id="@+id/expandableLinearCurrentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="3">

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="#ff0000" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/building_no"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/building_no"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/Floor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Floor"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/Appartment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Appartment"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/location_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/location_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </FrameLayout>
    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSaveMyLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@color/button_red"
            android:text="Save"
            android:textColor="#fff"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSaveLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#b45705"
            android:text="Next"
            android:textColor="#fff" />
    </FrameLayout>


</RelativeLayout>

</ScrollView>