<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/anim_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/Voice"
            app:titleTextColor="@android:color/white" />


    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_record"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/btnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_mic_white_36dp"
        app:fab_colorNormal="@color/primary" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/recordProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:fontFamily="sans-serif-light"
        android:textSize="60sp" />

    <ProgressBar
        android:id="@+id/recordProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="@drawable/record_progress_bar_background"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/record_progress_bar" />

    <Button
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:drawableLeft="@drawable/ic_media_pause"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/pause_recording_button"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/recording_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRecord"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/record_prompt"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>
</LinearLayout>