<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
 >
    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Profile Info"
        android:textColor="#90c40909"
        android:textSize="33dp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/full_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Full Name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/dateTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/datePickerInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_date"
            android:focusableInTouchMode="false"
            android:clickable="true"
            />

    </android.support.design.widget.TextInputLayout>

    <co.ceryle.radiorealbutton.RadioRealButtonGroup
        android:id="@+id/radioButtonGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="2dp"
        app:rrbg_borderColor="@color/yellow_600"
        app:rrbg_borderSize="1dp"
        app:rrbg_bottomLineSize="0dp"
        app:rrbg_dividerColor="@color/yellow_600"
        app:rrbg_dividerPadding="0dp"
        app:rrbg_dividerSize="1dp"
        app:rrbg_radius="10dp"
        app:rrbg_selectorColor="@color/red_700"
        app:rrbg_selectorSize="6dp">

        <co.ceryle.radiorealbutton.RadioRealButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/b12"
            app:rrb_drawableHeight="40dp"
            app:rrb_drawableWidth="40dp"
            app:rrb_rippleColor="@color/black"/>

        <co.ceryle.radiorealbutton.RadioRealButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/b13"
            app:rrb_drawableHeight="40dp"
            app:rrb_drawableWidth="40dp"
            app:rrb_rippleColor="@color/DarkRed"/>
    </co.ceryle.radiorealbutton.RadioRealButtonGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:hint="Gender"
        app:ms_background_color="@color/green"
        android:layout_height="wrap_content"/>


    </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="10dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#b45705"
                android:text="@string/dialog_action_cancel"
                android:id="@+id/btnCancel"
                android:textColor="#fff" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_margin="10dp"
                android:background="#b45705"
                android:text="@string/dialog_action_ok"

                android:id="@+id/btnOk"
                android:textColor="#fff" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>